--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
  Description:  Weld-Ed Theme 
  Author: LCCC Web Development Team 
  Author URI: http://www.lorainccc.edu 
- Template: lccc-framework 
+ Template: LCCC-Framework 
  Version:1.0.0 
  License: GNU General Public License v2 or later 
  License URI: http://www.gnu.org/licenses/gpl-2.0.html 
@@ -482,6 +482,7 @@ ul.sub-menu > li > a {
   border-radius: 25px 0 0 25px;
   height: inherit;
   margin: 0;
+  padding-left: 1em;
 }
 
 .wp-block-search.wp-block-search__button-inside .wp-block-search__inside-wrapper .wp-block-search__button {
